# AI Agent Flow - UML Class Diagram

```mermaid
classDiagram
    class AIAgentFlow {
        +CLIInterface cli
        +AgentManager agent_manager
        +MCPManager mcp_manager
        +LLMInterface llm_interface
        +DataManager data_manager
        +__init__()
        +_get_additional_info()
        +_execute_tool_operation()
        +_process_subtask()
        +run()
    }

    class CLIInterface {
        +running: bool
        +__init__()
        +start()
        +show_help()
        +process_command()
    }

    class AgentManager {
        +agents: dict
        +__init__()
        +create_core_agents()
        +create_task()
        +run_task()
    }

    class MCPManager {
        +client: MCPClient
        +__init__()
        +register_file_tools()
        +execute_file_operation()
    }

    class LLMInterface {
        +base_url: str
        +model_name: str
        +api_key: str
        +headers: dict
        +__init__()
        +_make_request()
        +chat_completion()
        +task_analysis()
        +generate_code()
        +validate_result()
    }

    class DataManager {
        +db_path: str
        +conn: sqlite3.Connection
        +__init__()
        +_initialize_schema()
        +save_task_result()
        +get_task_history()
        +update_file_metadata()
        +get_file_metadata()
    }

    AIAgentFlow --> CLIInterface
    AIAgentFlow --> AgentManager
    AIAgentFlow --> MCPManager
    AIAgentFlow --> LLMInterface
    AIAgentFlow --> DataManager